--- a/lib/style.css
+++ b/lib/style.css
@@ -21,7 +21,22 @@
     --bracket--pair-spacing: 5rem;
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+
+    overflow: hidden;
+}
+
 body {
+    display: grid;
+
+    grid-template-areas:
+        'header'
+        'main';
+
+    margin: 0;
+
     background-color: white;
     color: black;
     font-family:
@@ -37,6 +52,26 @@ body {
         sans-serif;
     font-size: 16px;
     line-height: 1.5;
+}
+
+header {
+    grid-area: header;
+
+    background-color: black;
+    color: white;
+}
+
+main {
+    grid-area: main;
+
+    padding: 0.5rem 1rem;
+
+    overflow: auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.75em;
 }
 
 .bracket {
