--- a/lib/style.css
+++ b/lib/style.css
@@ -1,9 +1,9 @@
 :root {
-    --body-background: white;
-    --body-color: black;
-
     --header-background: black;
     --header-color: white;
+
+    --main-background: white;
+    --main-color: black;
 
     --bracket--competitor-background: white;
     --bracket--competitor-color: black;
@@ -47,8 +47,6 @@ body {
 
     margin: 0;
 
-    background-color: var(--body-background);
-    color: var(--body-color);
     font-family:
         ui-rounded,
         'Hiragino Maru Gothic ProN',
@@ -75,6 +73,9 @@ main {
     grid-area: main;
 
     padding: 0.5rem 1rem;
+
+    background-color: var(--main-background);
+    color: var(--main-color);
 
     overflow: auto;
 }
