feat: restyled main background to be off-white

--- a/lib/style.css
+++ b/lib/style.css
@@ -2,7 +2,7 @@
     --header-background: black;
     --header-color: white;
 
-    --main-background: white;
+    --main-background: whitesmoke;
     --main-color: black;
 
     --bracket--competitor-background: white;
