--- a/lib/style.css
+++ b/lib/style.css
@@ -103,10 +103,18 @@ header > h3 {
 
 header > h1 {
     margin-top: 0;
+    margin-bottom: 0.25em;
+
+    font-size: 3rem;
 }
 
 header > h2 {
     margin-top: 0;
+
+    font-size: 2rem;
+
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
 }
 
 .bracket {
