--- a/lib/style.css
+++ b/lib/style.css
@@ -129,8 +129,11 @@ header > h2 {
     display: flex;
     flex-grow: 1;
 
-    margin-bottom: 2rem;
     padding: 0;
+}
+
+.bracket:not(:last-child) {
+    margin-bottom: 2rem;
 }
 
 .bracket--round {
