--- a/lib/style.css
+++ b/lib/style.css
@@ -169,7 +169,7 @@ header > h2 {
     padding: 0 0.5em 0 0.5em;
 }
 
-.bracket--competitor:not([data-is-winner]) > .bracket--competitor-text {
+.bracket--competitor[data-is-loser] > .bracket--competitor-text {
     color: var(--bracket--competitor--loser-color);
     opacity: 0.85;
 }
@@ -178,7 +178,7 @@ header > h2 {
     padding: 0.5em;
 }
 
-.bracket--competitor:not([data-is-winner]) > .bracket--competitor-icon {
+.bracket--competitor[data-is-loser] > .bracket--competitor-icon {
     background-color: var(--bracket--competitor--loser-background);
     color: var(--bracket--competitor--loser-color);
 }
