--- a/lib/style.css
+++ b/lib/style.css
@@ -70,6 +70,22 @@
     );
 }
 
+html {
+    font-family:
+        ui-rounded,
+        'Hiragino Maru Gothic ProN',
+        Quicksand,
+        Comfortaa,
+        Manjari,
+        'Arial Rounded MT',
+        'Arial Rounded MT Bold',
+        Calibri,
+        source-sans-pro,
+        sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
 html, body {
     height: 100%;
     width: 100%;
@@ -85,20 +101,6 @@ body {
         'main';
 
     margin: 0;
-
-    font-family:
-        ui-rounded,
-        'Hiragino Maru Gothic ProN',
-        Quicksand,
-        Comfortaa,
-        Manjari,
-        'Arial Rounded MT',
-        'Arial Rounded MT Bold',
-        Calibri,
-        source-sans-pro,
-        sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
 }
 
 header {
