refactor: header padding should be equal to reduce forced line breaks

--- a/lib/style.css
+++ b/lib/style.css
@@ -110,7 +110,7 @@ header {
     grid-area: header;
     justify-content: center;
 
-    padding: 6rem 12rem;
+    padding: 6rem;
 
     background-color: var(--header-background);
     color: var(--header-color);
