--- a/lib/style.css
+++ b/lib/style.css
@@ -269,3 +269,9 @@ header > h2 {
 
     border-right: 1px solid currentColor;
 }
+
+@media (max-width: 480px) {
+    html {
+        font-size: 14px;
+    }
+}
