--- a/lib/style.css
+++ b/lib/style.css
@@ -274,4 +274,20 @@ header > h2 {
     html {
         font-size: 14px;
     }
+
+    header {
+        padding: 1rem;
+    }
+
+    header > h3 {
+        font-size: 1.5rem;
+    }
+
+    header > h1 {
+        font-size: 2.25rem;
+    }
+
+    header > h2 {
+        font-size: 1.75rem;
+    }
 }
