--- a/lib/style.css
+++ b/lib/style.css
@@ -163,8 +163,6 @@ header > h2 {
     display: flex;
     flex-grow: 1;
 
-    min-width: 1000px;
-
     padding: 0;
 }
 
@@ -207,6 +205,7 @@ header > h2 {
 }
 
 .bracket--competitor-text {
+    min-width: 24ch;
     padding: 0 0.5em 0 0.5em;
 }
 
