--- a/lib/style.css
+++ b/lib/style.css
@@ -138,6 +138,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0;
 }
 
+header br {
+    display: none;
+}
+
 header > h3 {
     margin-bottom: 0;
 
@@ -274,6 +278,10 @@ header > h2 {
 
     header {
         padding: 1rem;
+    }
+
+    header br {
+        display: initial;
     }
 
     header > h3 {
